# aggrada

./: .gitignore  CONTRIBUTING.md  README.md  eslint.config.mjs  package.json  pnpm-workspace.yaml  pyproject.toml  setup.py  turbo.json
.husky/: pre-commit
aggrada/: __init__.py  core.py
aggrada.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
aggrada/aggregators/: __init__.py  spatial.py  temporal.py
aggrada/readers/: __init__.py  csv.py  excel.py  json.py  shapefile.py
aggrada/transformers/: __init__.py  flatten.py  spatial.py  temporal.py
aggrada/utils/: __init__.py  validation.py  visualization.py
docs/: paper.bib  paper.md
docs/source/: api.rst  conf.py  examples.rst  index.rst  installation.rst  usage.rst
subsystem/aggrada-aggregator/: package.json  tsconfig.json
subsystem/aggrada-aggregator/src/: cli.ts  index.ts
subsystem/aggrada-analytics/: README.md  pyproject.toml
subsystem/aggrada-analytics/src/damicore/: README.md  bayesian_network.py  cophenetic.py  damicore_runner.py  data_loading.py  distance.py  main copy.py  main.py  preprocessing.py  resampling.py  visualization.py
subsystem/aggrada-analytics/src/geo_standard/ibge/: get_map.py  get_metadata.py
subsystem/aggrada-analytics/src/ingestion/tests/: test_file_reader.py
subsystem/aggrada-analytics/src/scripts/: db_setup.py  file_reader.py  handle_payload.py  logger.py
subsystem/aggrada-core/: README.md  package.json  tsconfig.json
subsystem/aggrada-core/docs/: ADMIN_LEVELS.md  PLANNING.md  SRS.md
subsystem/aggrada-core/ibge/: getCities.ts  getCityMap.ts  index.ts
subsystem/aggrada-ingestion/: README.md  package.json  tsconfig.json
subsystem/aggrada-ingestor/: package.json  tsconfig.json
subsystem/aggrada-outsource/: Dockerfile  README.md  package.json  tsconfig.json
subsystem/airflow/: (test) docker-compose.yml  DRAFT.md  docker-compose.yaml  package.json
subsystem/api/: Dockerfile  package.json  tsconfig.json  tsup.config.ts
subsystem/app/: package.json
subsystem/jupyterhub/: README.md
subsystem/outreach/: Dockerfile  README.md  fetch.local.ts  package.json  tsconfig.json
subsystem/postgresdb/: DATABASE.md  LOG.md  README.md  docker-compose.dev.yml  docker-compose.yml  package.json  sequelize-erd.d.ts  tsconfig.json
tests/: conftest.py  test_aggregators.py  test_core.py  test_readers.py  test_transformers.py  test_utils.py
(+182 files in other folders)
