[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aggrada"
version = "0.1.0"
description = "Automatic spatiotemporal aggregation of multi-source heterogeneous raw data at multiple granularities"
readme = "README.md"
authors = [
    {name = "Ennio Politi Lopes", email = "ennio.lopes@example.com"}
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
keywords = ["aggregation", "spatiotemporal", "gis", "data-science"]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "geopandas>=0.10.0",
    "shapely>=1.8.0",
    "numpy>=1.20.0",
    "matplotlib>=3.4.0",
    "pyproj>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/username/aggrada"
"Bug Tracker" = "https://github.com/username/aggrada/issues"
"Documentation" = "https://aggrada.readthedocs.io/"

[tool.setuptools]
packages = ["aggrada"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
