[tool.poetry]
name = "aggrada"
version = "0.1.0"
description = ""
authors = ["ennio.lopes <enniolopes@usp.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
SQLAlchemy = "^2.0.34"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.8.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
